[gd_scene load_steps=16 format=3 uid="uid://detq41mfbn72b"]

[ext_resource type="PackedScene" uid="uid://cdvsch0swdahw" path="res://worker.tscn" id="1_8ewb7"]
[ext_resource type="Script" path="res://game_screen.gd" id="1_nc8ki"]
[ext_resource type="Texture2D" uid="uid://b7w6mjn4duyka" path="res://window.png" id="2_i5vpn"]
[ext_resource type="PackedScene" uid="uid://daggt5qydgcic" path="res://end_screen.tscn" id="4_1on5t"]

[sub_resource type="Theme" id="Theme_afaqf"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/font_sizes/font_size = 23

[sub_resource type="Animation" id="Animation_xyuij"]
resource_name = "text"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../RichTextLabel2:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_dywcw"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../RichTextLabel2:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x7un6"]
_data = {
"RESET": SubResource("Animation_dywcw"),
"text": SubResource("Animation_xyuij")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_2gegk"]
atlas = ExtResource("2_i5vpn")
region = Rect2(0, 0, 1984, 1984)

[sub_resource type="AtlasTexture" id="AtlasTexture_k10di"]
atlas = ExtResource("2_i5vpn")
region = Rect2(1984, 0, 1984, 1984)

[sub_resource type="AtlasTexture" id="AtlasTexture_22kaq"]
atlas = ExtResource("2_i5vpn")
region = Rect2(3968, 0, 1984, 1984)

[sub_resource type="AtlasTexture" id="AtlasTexture_736u1"]
atlas = ExtResource("2_i5vpn")
region = Rect2(0, 1984, 1984, 1984)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq42u"]
atlas = ExtResource("2_i5vpn")
region = Rect2(1984, 1984, 1984, 1984)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb6mu"]
atlas = ExtResource("2_i5vpn")
region = Rect2(3968, 1984, 1984, 1984)

[sub_resource type="SpriteFrames" id="SpriteFrames_ikguw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gegk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k10di")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_22kaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_736u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq42u")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_lb6mu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="GameScreen" type="Node2D"]
script = ExtResource("1_nc8ki")

[node name="bckground" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 653.0
color = Color(0, 0, 0, 1)

[node name="PerformancePanel" type="ColorRect" parent="bckground"]
layout_mode = 0
offset_left = 748.0
offset_top = 2.0
offset_right = 1154.0
offset_bottom = 651.0
color = Color(0.803922, 0.803922, 0.803922, 1)

[node name="Label" type="Label" parent="bckground/PerformancePanel"]
layout_mode = 0
offset_left = 13.0
offset_top = 16.0
offset_right = 290.0
offset_bottom = 55.0
theme = SubResource("Theme_afaqf")
theme_override_font_sizes/font_size = 32
text = "Performance Metrics: "

[node name="VBoxContainer" type="VBoxContainer" parent="bckground/PerformancePanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 83.0
offset_right = 295.0
offset_bottom = 609.0
theme_override_constants/separation = 27

[node name="ToDo" type="Label" parent="bckground/PerformancePanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_afaqf")
text = "Things To Do: 0"

[node name="Label" type="Label" parent="bckground/PerformancePanel/VBoxContainer/ToDo"]
layout_mode = 0
offset_left = 4.0
offset_top = 29.0
offset_right = 131.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 14
text = "always increasing"

[node name="LinesOfCode" type="Label" parent="bckground/PerformancePanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_afaqf")
text = "Lines of Code: 0"

[node name="Label" type="Label" parent="bckground/PerformancePanel/VBoxContainer/LinesOfCode"]
layout_mode = 0
offset_left = 2.0
offset_top = 28.0
offset_right = 144.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 14
text = "the more the better"

[node name="TechDebt" type="Label" parent="bckground/PerformancePanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_afaqf")
text = "Tech Debt: 0"

[node name="Label" type="Label" parent="bckground/PerformancePanel/VBoxContainer/TechDebt"]
layout_mode = 0
offset_left = 2.0
offset_top = 28.0
offset_right = 271.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 14
text = "slows task completion and decreases morale"

[node name="EmployeeMorale" type="Label" parent="bckground/PerformancePanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_afaqf")
text = "Employee Morale: GOOD"

[node name="Label" type="Label" parent="bckground/PerformancePanel/VBoxContainer/EmployeeMorale"]
layout_mode = 0
offset_left = 2.0
offset_top = 30.0
offset_right = 310.0
offset_bottom = 76.0
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 12
text = "the better the morale, the less tech debt.
if this reaches 'TERRIBLE\", employees will quit"

[node name="Money" type="Label" parent="bckground/PerformancePanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_afaqf")
text = "Money: $0"

[node name="Label" type="Label" parent="bckground/PerformancePanel/VBoxContainer/Money"]
layout_mode = 0
offset_top = 27.0
offset_right = 208.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 14
text = "+ $100 per task completed 
"

[node name="NewHire" type="Button" parent="bckground/PerformancePanel/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
disabled = true
text = "NEW HIRE
$150,000"

[node name="Label" type="Label" parent="bckground/PerformancePanel/VBoxContainer/NewHire"]
layout_mode = 0
offset_left = 274.0
offset_right = 408.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "+++ coding speed"

[node name="IntegrateAI" type="Button" parent="bckground/PerformancePanel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "INTEGRATE AI
$1,000"

[node name="Label" type="Label" parent="bckground/PerformancePanel/VBoxContainer/IntegrateAI"]
layout_mode = 0
offset_left = 276.0
offset_right = 369.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "++ coding speed
++ tech debt"

[node name="PizzaParty" type="Button" parent="bckground/PerformancePanel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "PIZZA PARTY
$500"

[node name="Label" type="Label" parent="bckground/PerformancePanel/VBoxContainer/PizzaParty"]
layout_mode = 0
offset_left = 275.0
offset_right = 372.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "+++ morale
reset task queue"

[node name="AI1" type="Control" parent="bckground"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="bckground/AI1"]
layout_mode = 0
offset_left = 11.0
offset_top = 15.0
offset_right = 725.0
offset_bottom = 630.0
theme_override_colors/default_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_font_sizes/normal_font_size = 20
text = "text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)
text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
python3


$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
import wikipedia 

# finding result for the search
# sentences = 2 refers to numbers of line

result = wikipedia.summary(\"India\", sentences = 2) 

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
"
scroll_active = false
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="AI1AnimationPlayer" type="AnimationPlayer" parent="bckground/AI1/RichTextLabel"]
libraries = {
"": SubResource("AnimationLibrary_x7un6")
}

[node name="RichTextLabel2" type="RichTextLabel" parent="bckground/AI1"]
layout_mode = 0
offset_left = 11.0
offset_top = 15.0
offset_right = 725.0
offset_bottom = 630.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
text = "text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)
text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
python3


$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
import wikipedia 

# finding result for the search
# sentences = 2 refers to numbers of line

result = wikipedia.summary(\"India\", sentences = 2) 

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
"
scroll_active = false
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="AI2" type="Control" parent="bckground"]
anchors_preset = 0
offset_left = 175.0
offset_top = 47.0
offset_right = 215.0
offset_bottom = 87.0

[node name="RichTextLabel" type="RichTextLabel" parent="bckground/AI2"]
layout_mode = 0
offset_left = 11.0
offset_top = 15.0
offset_right = 725.0
offset_bottom = 630.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_font_sizes/normal_font_size = 35
text = "text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)
text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
python3


$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
import wikipedia 

# finding result for the search
# sentences = 2 refers to numbers of line

result = wikipedia.summary(\"India\", sentences = 2) 

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
"
scroll_active = false
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="AI2AnimationPlayer" type="AnimationPlayer" parent="bckground/AI2/RichTextLabel"]
libraries = {
"": SubResource("AnimationLibrary_x7un6")
}

[node name="RichTextLabel2" type="RichTextLabel" parent="bckground/AI2"]
layout_mode = 0
offset_left = 11.0
offset_top = 15.0
offset_right = 725.0
offset_bottom = 630.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 35
text = "text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)
text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
python3


$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
import wikipedia 

# finding result for the search
# sentences = 2 refers to numbers of line

result = wikipedia.summary(\"India\", sentences = 2) 

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
"
scroll_active = false
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="AI3" type="Control" parent="bckground"]
anchors_preset = 0
offset_left = 106.0
offset_top = 165.0
offset_right = 146.0
offset_bottom = 205.0

[node name="RichTextLabel" type="RichTextLabel" parent="bckground/AI3"]
layout_mode = 0
offset_left = 11.0
offset_top = 15.0
offset_right = 978.0
offset_bottom = 630.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.270588, 0.270588, 0.270588, 1)
theme_override_font_sizes/normal_font_size = 50
text = "text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)
text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
python3


$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
import wikipedia 

# finding result for the search
# sentences = 2 refers to numbers of line

result = wikipedia.summary(\"India\", sentences = 2) 

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
"
scroll_active = false
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="AI3AnimationPlayer" type="AnimationPlayer" parent="bckground/AI3/RichTextLabel"]
libraries = {
"": SubResource("AnimationLibrary_x7un6")
}

[node name="RichTextLabel2" type="RichTextLabel" parent="bckground/AI3"]
layout_mode = 0
offset_left = 11.0
offset_top = 15.0
offset_right = 978.0
offset_bottom = 630.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)
text: str = input('Type a number, and its factorial will be printed: ')
n: int = int(text)

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
python3


$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
import wikipedia 

# finding result for the search
# sentences = 2 refers to numbers of line

result = wikipedia.summary(\"India\", sentences = 2) 

if n < 0:
    raise ValueError('You must enter a non-negative integer')

factorial: int = 1
for i in range(2, n + 1):
    factorial *= i

print(factorial)


$ pip install -r requirements.txt
$ bash runtests  # will run tests for python and 
$ python -m unittest discover tests/ '*test.py'  # manual style

# importing the module
"
scroll_active = false
visible_characters = 0
visible_characters_behavior = 1
visible_ratio = 0.0

[node name="Worker" parent="." instance=ExtResource("1_8ewb7")]
position = Vector2(-53, 311)

[node name="Window" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.686275)
position = Vector2(629, 169)
scale = Vector2(0.175403, 0.175403)
sprite_frames = SubResource("SpriteFrames_ikguw")
autoplay = "default"
frame = 1
frame_progress = 0.951982

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Worker2" parent="." instance=ExtResource("1_8ewb7")]
position = Vector2(127, 310)

[node name="Worker3" parent="." instance=ExtResource("1_8ewb7")]
position = Vector2(313, 310)

[node name="Worker4" parent="." instance=ExtResource("1_8ewb7")]
visible = false
position = Vector2(498, 310)

[node name="Worker5" parent="." instance=ExtResource("1_8ewb7")]
visible = false
position = Vector2(-52, 82)

[node name="Worker6" parent="." instance=ExtResource("1_8ewb7")]
visible = false
position = Vector2(124, 81)

[node name="Worker7" parent="." instance=ExtResource("1_8ewb7")]
visible = false
position = Vector2(316, 80)

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="end_screen" parent="UI" instance=ExtResource("4_1on5t")]

[node name="ColorRect" parent="UI/end_screen" index="0"]
mouse_filter = 2

[connection signal="tech_debt_stress" from="." to="Worker" method="_on_game_screen_tech_debt_stress"]
[connection signal="pressed" from="bckground/PerformancePanel/VBoxContainer/NewHire" to="." method="_on_new_hire_pressed"]
[connection signal="pressed" from="bckground/PerformancePanel/VBoxContainer/IntegrateAI" to="." method="_on_integrate_ai_pressed"]
[connection signal="pressed" from="bckground/PerformancePanel/VBoxContainer/PizzaParty" to="." method="_on_pizza_party_pressed"]
[connection signal="finished_task" from="Worker" to="." method="_on_worker_finished_task"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished_task" from="Worker2" to="." method="_on_worker_2_finished_task"]
[connection signal="finished_task" from="Worker3" to="." method="_on_worker_3_finished_task"]
[connection signal="finished_task" from="Worker4" to="." method="_on_worker_4_finished_task"]
[connection signal="finished_task" from="Worker5" to="." method="_on_worker_5_finished_task"]
[connection signal="finished_task" from="Worker6" to="." method="_on_worker_6_finished_task"]
[connection signal="finished_task" from="Worker7" to="." method="_on_worker_7_finished_task"]
[connection signal="pressed" from="UI/end_screen/ColorRect/Restart" to="UI/end_screen" method="_on_restart_pressed"]

[editable path="UI/end_screen"]
